<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.teste.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_teste"
            app:destination="@id/teste" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.teste.ui.gallery.GerenciandoLivrosFragment"
        android:label="@string/menu_gerenciando_livros"
        tools:layout="@layout/fragment_gerenciando_livros" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.teste.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_historico"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/teste"
        android:name="com.example.teste.Teste"
        android:label="fragment_teste"
        tools:layout="@layout/fragment_teste" />
    <fragment
        android:id="@+id/historico"
        android:name="com.example.teste.Historico"
        android:label="fragment_historico"
        tools:layout="@layout/fragment_historico" />
</navigation>